Fix editor text offset issue on Firefox

--- a/src/editor/PoemEditor.module.css
+++ b/src/editor/PoemEditor.module.css
@@ -98,6 +98,7 @@
 }
 .trokee {
   position: relative;
+  display: inline-block;
 }
 .trokee.odd::before {
   content: '';
@@ -106,19 +107,23 @@
   top: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.08);
   transform: skewX(-15deg);
 }
 .syllable {
   position: relative;
+  display: inline-block;
 }
 .invisible {
   visibility: hidden;
 }
 .syllableText {
+  display: block;
   position: absolute;
   left: 0;
   right: 0;
+  top: 0;
+  bottom: 0;
   text-align: center;
   letter-spacing: 0;
 }
